RESOLVED FIXED303543
Web process crashes under PDFPluginBase::getByteRanges() during background data preload
https://bugs.webkit.org/show_bug.cgi?id=303543
Summary Web process crashes under PDFPluginBase::getByteRanges() during background da...
Abrar Rahman Protyasha
Reported 2025-12-04 05:07:50 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2025-12-04 13:25:16 PST
EWS
Comment 2 2025-12-04 21:15:08 PST
Committed 303958@main (0fc6efb01ba8): <https://commits.webkit.org/303958@main> Reviewed commits have been landed. Closing PR #54865 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.